<resources>
    <string name="app_name">SimpleListApplication</string>
    <string name="actionbar_back_title">Back</string>
    <string name="actionbar_refresh_title">Refresh</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="error_network">Netwrok Error!</string>
    <string name="error_empty_list">The list is empty.\nTry Again?</string>
    <string name="main_fragment_title">Products</string>
</resources>
